More style-fixes after shifting to QTextBrowser rather than webeng.

--- a/styles/docoverview.css
+++ b/styles/docoverview.css
@@ -63,9 +63,11 @@ div.alignright {
   color: #800040;
 }
 
-.head_selected {   border-width:1px;
-  border-style:solid;
-  border-color:#00008b;
+.head_selected {   
+    border-width:1px;
+    border-style:solid;
+    border-color:#00008b;
+    padding: 15;
 }
 .body_selected {   border-width:1px;
   border-style:solid;
@@ -97,13 +99,12 @@ div.alignright {
 }
 
 td.baseline {
-  border-bottom:1px inset #898989;
-  padding-left: 30px;
-  margin-left: 30px;
+    border-style: solid;
+    
 }
 
 td.itemnums {
-  width: 15px;
+  width: 8px;
   text-align: right;
   vertical-align: bottom;
 }
@@ -117,7 +118,7 @@ td.prices {
 }
 
 td.legends {
-   width: 10px;
+   width: 5%;
    text-align: right;
    vertical-align: bottom;
 }
